--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "black>=25.1.0",
+    "isort>=6.0.1",
     "makemkv>=0.3.1",
     "pydantic>=2.11.7",
     "requests>=2.32.4",
