--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,6 @@ log_cli = true
 log_cli_level = debug 
 log_format = %(asctime)s [%(levelname)s] [%(funcName)s] %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
+markers = 
+  cli: tests that excercise the CLI interface.
+  core: tests that excercise the core libraries.
