--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "isort>=6.0.1",
     "makemkv>=0.3.1",
     "requests>=2.32.4",
+    "textual>=5.0.1",
     "tomlkit>=0.13.3",
     "typer>=0.16.0",
 ]
