--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "black>=25.1.0",
     "isort>=6.0.1",
     "makemkv>=0.3.1",
+    "pydantic>=2.11.7",
     "requests>=2.32.4",
     "textual>=5.0.1",
     "tomlkit>=0.13.3",
